<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/next_game"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/nextGameLogo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nextGameVersus"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:text="@string/score_grab_in_process"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/nextGameLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextGameTicketButton"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_marginStart="284dp"
        android:layout_marginTop="60dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/ticket_info"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextGameVersus" />

    <TextView
        android:id="@+id/nextGameDate"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:text="12-12-1999"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/nextGameVersus"
        app:layout_constraintStart_toEndOf="@+id/nextGameLogo" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nextGameLogo"
        app:layout_constraintTop_toBottomOf="@+id/nextGameVersus" />

</androidx.constraintlayout.widget.ConstraintLayout>