<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.96" />

    <TextView
        android:id="@+id/sogReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sog_reminder"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline19" />

    <TextView
        android:id="@+id/AwaySog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_placeholder"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/sogReminder" />

    <TextView
        android:id="@+id/homeSog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stat_placeholder"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/sogReminder" />

    <TextView
        android:id="@+id/PowerPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ppp_reminder"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/sogReminder" />

    <View
        android:id="@+id/sep1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/PowerPlay"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/AwaySog" />

    <View
        android:id="@+id/sep"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/awayPPO" />

    <View
        android:id="@+id/sep2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/PowerPlay" />

    <View
        android:id="@+id/sep3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/AwaySog"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/sogReminder"
        app:layout_constraintVertical_bias="0.49" />

    <View
        android:id="@+id/sep4"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/sep1"
        app:layout_constraintEnd_toStartOf="@+id/homeSog"
        app:layout_constraintStart_toEndOf="@+id/AwaySog"
        app:layout_constraintTop_toBottomOf="@+id/sogReminder" />

    <View
        android:id="@+id/sep5"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/sep"
        app:layout_constraintEnd_toStartOf="@+id/homePPO"
        app:layout_constraintStart_toEndOf="@+id/awayPPO"
        app:layout_constraintTop_toBottomOf="@+id/sep2" />

    <TextView
        android:id="@+id/awayPPO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stat_placeholder"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline17"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/PowerPlay" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <TextView
        android:id="@+id/homePPO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stat_placeholder"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/PowerPlay" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="14dp" />

</androidx.constraintlayout.widget.ConstraintLayout>